# MGTools

./: .bumpversion.toml  README.md  pyproject.toml
.github/workflows/: debug.yml  release.yml
src/mgtools/: __init__.py  chunk.py  constants.py  file.py  mgscii.py  resource.py
src/mgtools/dataclasses/: glyph.py
src/mgtools/enumerators/: data_type.py  game.py  platform.py
src/mgtools/mg1/: __init__.py  constants.py  helpers.py  mappings.py  resource.py
src/mgtools/mg1/chunks/: animated_sprite.py  font.py  single.py  texture.py
src/mgtools/mg1/dataclasses/: glyph.py
src/mgtools/mg1/enumerators/: chunk_type.py  file_type.py  resource_platform.py
src/mgtools/mg1/formats/: font.py  locale.py  palette.py  sprite.py  unknown.py
src/mgtools/readers/: font.py  locale.py  palette.py  sprite.py  unknown.py
