[project]
name = "mgtools"
version = "0.1.0"
description = ""
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "mgtools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
